Añadida funcionalidad para gestionar consultas veterinarias
Se implementaron cambios en todas las capas del sistema:
- En la capa de datos, se añadieron clases y métodos para manejar consultas (`ConsultaRepository`, `Insertar`).
- En la capa de negocio, se creó la clase `negocioConsulta` con el método `RegistrarConsulta`.
- En la capa de presentación, se añadió la página `registrarConsulta.aspx` con su lógica asociada para registrar consultas.
- Se actualizaron referencias en los archivos `.csproj` y se configuró `inicio.aspx` como página de inicio.
- Se añadieron eventos y métodos para redirigir a la nueva funcionalidad desde la página principal.

Además, se crearon nuevas entidades (`consulta`) y se actualizaron binarios generados automáticamente.

--- a/dato/dato.csproj
+++ b/dato/dato.csproj
@@ -42,9 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="datoConsulta.cs" />
     <Compile Include="datoDueno.cs" />
     <Compile Include="datoMascota.cs" />
     <Compile Include="datoUsuario.cs" />
+    <Compile Include="entidades\consulta.cs" />
     <Compile Include="entidades\dueno.cs" />
     <Compile Include="entidades\mascota.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
