--- a/presentacion/bin/presentacion.dll.config
+++ b/presentacion/bin/presentacion.dll.config
@@ -1,14 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
-  https://go.microsoft.com/fwlink/?LinkId=169433
-  -->
 <configuration>
-  <system.web>
-    <compilation debug="true" targetFramework="4.8" />
-    <httpRuntime targetFramework="4.8" />
-  </system.web>
-  <connectionStrings>
-    <add name="con" connectionString="Server=(local);Database=Veterinaria;Trusted_Connection=True;TrustServerCertificate=True;" />
-  </connectionStrings>
+	<system.web>
+		<compilation debug="true" targetFramework="4.8" />
+		<httpRuntime targetFramework="4.8" />
+		<pages controlRenderingCompatibilityVersion="4.0" clientIDMode="AutoID" />
+	</system.web>
+
+	<connectionStrings>
+		<add name="con" connectionString="Server=EDUARDO\U20220705;Database=Veterinaria;Trusted_Connection=True;TrustServerCertificate=True;" />
+	</connectionStrings>
 </configuration>
