--- a/presentacion/bin/presentacion.dll.config
+++ b/presentacion/bin/presentacion.dll.config
@@ -1,16 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
-  https://go.microsoft.com/fwlink/?LinkId=169433
-  -->
 <configuration>
-  <system.web>
-    <compilation debug="true" targetFramework="4.8" />
-    <httpRuntime targetFramework="4.8" />
-  </system.web>
-  <connectionStrings>
-    <add name="con" connectionString="Server=(local);Database=Veterinaria;Trusted_Connection=True;TrustServerCertificate=True;" />
-  </connectionStrings>
+	<system.web>
+		<compilation debug="true" targetFramework="4.8" />
+		<httpRuntime targetFramework="4.8" />
+
+		<!-- Mueve tus secciones de Forms Auth aquí, dentro de system.web -->
+		<authentication mode="Forms">
+			<forms loginUrl="~/pages/loginForm.aspx" timeout="30" />
+		</authentication>
+		<authorization>
+			<deny users="?" />
+			<!-- usuarios anónimos quedan bloqueados -->
+		</authorization>
+	</system.web>
+
+	<connectionStrings>
+		<add name="con" connectionString="Server=(local);Database=Veterinaria;Trusted_Connection=True;TrustServerCertificate=True;"/>
+	</connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
